Changed DnaSynthesizingRecipe input to SizedIngredient